Overflow issue fixed

--- a/templates/FAQ/static/css/style.css
+++ b/templates/FAQ/static/css/style.css
@@ -299,7 +299,4 @@ h2 {
     margin-top: 7%;
     margin-bottom: 15%;
   }
-  body {
-    overflow-y: hidden;
-  }
 }
